syntax = "proto3";

package merch.v1;

option go_package = "github.com/Lexv0lk/merch-store/api/merch/v1;merchapi";

// Service

service AuthService {
  rpc Authenticate(AuthRequest) returns (AuthResponse);
  rpc GetUserID(GetUserIDRequest) returns (GetUserIDResponse);
  rpc GetUsernames(GetUsernamesRequest) returns (GetUsernamesResponse);
}

// Messages

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message GetUserIDRequest {
  string username = 1;
}

message GetUserIDResponse {
  int32 userID = 1;
}

message GetUsernamesRequest {
  repeated int32 userIDs = 1;
}

message GetUsernamesResponse {
  map<int32, string> usernames = 1;
}